# spatialite

./: .gitmodules  CMakeLists.txt  Makefile.am  Makefile.in  README.md  aclocal.m4  conanfile.txt  config-msvc.h  config.h  config.h.in  configure  configure.ac  fakeconfig.h  fakeconfig.h.in  geos-config.sh  makefile.vc  makefile64.vc  makefile_mod.vc  makefile_mod64.vc  nmake64.opt  nmake_mod64.opt  spatialite-sql-latest.html  spatialite.pc.in
.github/workflows/: main.yml
examples/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
src/connection_cache/: Makefile.in  alloc_cache.c  gg_sequence.c
src/control_points/: Makefile.in  gaia_control_points.c  grass_crs.h  grass_crs3d.c  grass_georef.c  grass_georef_tps.c
src/cutter/: Makefile.in  gaia_cutter.c
src/dxf/: Makefile.in  dxf_load_distinct.c  dxf_load_mixed.c  dxf_loader.c  dxf_parser.c  dxf_private.h  dxf_writer.c
src/gaiaaux/: Makefile.in  gg_sqlaux.c  gg_utf8.c
src/gaiaexif/: Makefile.in  gaia_exif.c
src/gaiageo/: Makefile.in  gg_advanced.c  gg_endian.c  gg_ewkt.c  gg_extras.c  gg_geoJSON.c  gg_geodesic.c  gg_geometries.c  gg_geoscvt.c  gg_gml.c  gg_kml.c  gg_matrix.c  gg_relations.c  gg_relations_ext.c  gg_rttopo.c  gg_shape.c  gg_transform.c  gg_vanuatu.c  gg_voronoj.c  gg_wkb.c  gg_wkt.c  gg_xml.c
src/geopackage/: Makefile.in  gaia_cvt_gpkg.c  gpkgAddGeometryColumn.c  gpkgBinary.c  gpkgCreateBaseTables.c  gpkgCreateTilesTable.c  gpkgCreateTilesZoomLevel.c  gpkgGetImageType.c  gpkgInsertEpsgSRID.c  gpkgMakePoint.c  gpkg_add_geometry_triggers.c  gpkg_add_spatial_index.c  gpkg_add_tile_triggers.c  gpkg_get_normal_row.c  gpkg_get_normal_zoom.c
src/headers/: Makefile.am  Makefile.in  spatialite.h  spatialite_private.h
src/md5/: Makefile.in  gaia_md5.c
src/shapefiles/: Makefile.in  shapefiles.c  validator.c
src/spatialite/: Makefile.am  Makefile.in  create_routing.c  dbobj_scopes.c  extra_tables.c  mbrcache.c  metatables.c  pause.c  se_helpers.c  spatialite.c  spatialite_init.c  srid_aux.c  statistics.c  table_cloner.c  virtualXL.c  virtualbbox.c  virtualdbf.c  virtualelementary.c  virtualfdo.c  virtualgeojson.c  virtualgpkg.c  virtualknn.c  virtualknn2.c  virtualnetwork.c  virtualrouting.c  virtualshape.c  virtualspatialindex.c  virtualxpath.c
src/sqlite_bulk_rtree/: Makefile.am  Makefile.in  RTreeBulkLoad.c  sqlite_rtree_bulk_load.h
src/srsinit/: Makefile.am  Makefile.in  epsg_inlined_00.c  epsg_inlined_01.c  epsg_inlined_02.c  epsg_inlined_03.c  epsg_inlined_04.c  epsg_inlined_05.c  epsg_inlined_06.c  epsg_inlined_07.c  epsg_inlined_08.c  epsg_inlined_09.c  epsg_inlined_10.c  epsg_inlined_11.c  epsg_inlined_12.c  epsg_inlined_13.c  epsg_inlined_14.c  epsg_inlined_15.c  epsg_inlined_16.c  epsg_inlined_17.c  epsg_inlined_18.c  epsg_inlined_19.c  epsg_inlined_20.c  epsg_inlined_21.c  epsg_inlined_22.c  epsg_inlined_23.c  epsg_inlined_24.c  epsg_inlined_25.c  epsg_inlined_26.c  epsg_inlined_27.c  epsg_inlined_28.c  epsg_inlined_29.c  epsg_inlined_30.c  epsg_inlined_31.c  epsg_inlined_32.c  epsg_inlined_33.c  epsg_inlined_34.c  epsg_inlined_35.c  epsg_inlined_36.c  epsg_inlined_37.c  (+27 more)
src/stored_procedures/: Makefile.in  stored_procedures.c
src/topology/: Makefile.in  gaia_auxnet.c  gaia_auxtopo.c  gaia_auxtopo_table.c  gaia_netstmts.c  gaia_network.c  gaia_topology.c  gaia_topostmts.c  lwn_network.c  lwn_network.h  lwn_network_private.h  net_callbacks.c  network_private.h  topo_callbacks.c  topology_private.h
src/versioninfo/: location.cpp  version.c
src/virtualtext/: Makefile.in  virtualtext.c
src/wfs/: Makefile.in  wfs_in.c
test/: Makefile.am  Makefile.in  check_add_tile_triggers.c  check_add_tile_triggers_bad_table_name.c  check_bufovflw.c  check_clone_table.c  check_control_points.c  check_create.c  check_createBaseTables.c  check_cutter.c  check_dbf_load.c  check_drop_rename.c  check_dxf.c  check_exif.c  check_exif2.c  check_extension.c  check_fdo1.c  check_fdo2.c  check_fdo3.c  check_fdo_bufovflw.c  check_geom_aux.c  check_geometry_cols.c  check_get_normal_row.c  check_get_normal_row_bad_geopackage.c  check_get_normal_row_bad_geopackage2.c  check_get_normal_zoom.c  check_get_normal_zoom_bad_geopackage.c  check_get_normal_zoom_bad_geopackage2.c  check_get_normal_zoom_extension_load.c  check_gpkgConvert.c  check_gpkgCreateFeaturesTable.c  check_gpkgCreateTilesTable.c  check_gpkgCreateTilesTableMissingSRID.c  check_gpkgCreateTilesZoomLevel.c  check_gpkgGetImageFormat.c  check_gpkgGetImageFormat_nonblob.c  check_gpkgGetImageFormat_nonimage.c  check_gpkgGetImageFormat_png.c  check_gpkgGetImageFormat_tiff.c  check_gpkgGetImageFormat_webp.c  (+65 more)
test/sql_stmt_bufoptsnew_tests/: Makefile.in
test/sql_stmt_bufoptsold_tests/: Makefile.in
test/sql_stmt_cache_tests/: Makefile.in
test/sql_stmt_freexl_tests/: Makefile.in
test/sql_stmt_geopackage_tests/: Makefile.in
test/sql_stmt_geos3100_tests/: Makefile.am  Makefile.in  constrdelaunay5.testcase  geosdensify10.testcase  geosdensify11.testcase  geosdensify8.testcase  geosdensify9.testcase
test/sql_stmt_geos3110_tests/: Makefile.in
test/sql_stmt_geos370_tests/: Makefile.am  Makefile.in  geosemptycircle10.testcase  geosemptycircle6.testcase  geosminrotrect6.testcase  hausdorffdistdens1.testcase  hausdorffdistdens10.testcase  hausdorffdistdens2.testcase  hausdorffdistdens3.testcase  hausdorffdistdens4.testcase  hausdorffdistdens5.testcase  hausdorffdistdens6.testcase  hausdorffdistdens7.testcase  hausdorffdistdens8.testcase  hausdorffdistdens9.testcase
test/sql_stmt_geos390_tests/: Makefile.am  Makefile.in
test/sql_stmt_geos_3100/: Makefile.in
test/sql_stmt_geos_3110/: Makefile.in
test/sql_stmt_geos_3120/: Makefile.in
test/sql_stmt_geos_380/: Makefile.in
test/sql_stmt_geos_390/: Makefile.in
test/sql_stmt_geos_391/: Makefile.in
test/sql_stmt_geos_non3100/: Makefile.in
test/sql_stmt_geos_non3110/: Makefile.in
test/sql_stmt_geos_non3120/: Makefile.in
test/sql_stmt_geos_non380/: Makefile.in
test/sql_stmt_geos_non390/: Makefile.in
test/sql_stmt_geos_tests/: Makefile.am  Makefile.in  cutter16.testcase  (+4 more)
(+162 files in other folders)
