
EXTRA_DIST = geosminboundcenter1.testcase \
	geosminboundcenter2.testcase \
	geosminboundcenter3.testcase \
	geosminboundcenter4.testcase \
	geosminboundcenter5.testcase \
	geosminboundcenter6.testcase \
	geosminboundcircle1.testcase \
	geosminboundcircle2.testcase \
	geosminboundcircle3.testcase \
	geosminboundcircle4.testcase \
	geosminboundcircle5.testcase \
	geosminboundcircle6.testcase \
	geosminboundradius1.testcase \
	geosminboundradius2.testcase \
	geosminboundradius3.testcase \
	geosminboundradius4.testcase \
	geosminboundradius5.testcase \
	geosminboundradius6.testcase
